tests/new_bad_arity.stderr
tests/new_bad_arity.hop:5:32: error: HOP1007: expected type
  5 |     var p *i32 = new(&ma, i32, 1, 2)
    |                                ^
tests/new_bad_arity.hop:5:32: note: expected type_kind type
